client/src/pages/styles.css
/* ... */
.add-chat-buttons {
    position: fixed;
    right: 5%;
    bottom: 5%;
}

.add-chat-buttons button {
    border: none;
    background: none;
    border: 1px solid black;
    margin: 10px;
    border-radius: 50%;
    height: 70px;
    width: 70px;
    background-color: white;

}

@media ( max-width: 700px) {
    .task-section {
        background-color: #ffffff;
        margin: 10px;
        margin-top: 80px;
        border: 1px solid #D9D9D9;
        border-radius: 15px;
    }
    .dashboard {
        margin-top: 80px;
        height: 100vh;
        width: 100vw;
        display: grid;
        grid-template-columns: 1fr;
        grid-template-rows: auto auto auto auto;
        background-color: white;
    }
    .habit-streak-section {
        background-color: #ffffff;
        margin: 10px;
        margin-top: 30px;
        border: 1px solid #D9D9D9;
        border-radius: 15px;
    }
}

@media (min-width: 701px) and (max-width: 999px) {
    .task-section {
        background-color: #ffffff;
        margin: 10px;
        margin-top: 80px;
        border: 1px solid #D9D9D9;
        border-radius: 15px;
    }
    .dashboard {
        margin-top: 80px;
        height: 100vh;
        width: 60vw;
        display: grid;
        grid-template-columns: 1fr;
        grid-template-rows: auto auto auto auto;
        background-color: white;
    }
    .habit-streak-section {
        background-color: #ffffff;
        margin: 10px;
        margin-top: 30px;
        border: 1px solid #D9D9D9;
        border-radius: 15px;
    }
}

@media (min-width: 1000px) {
    .dashboard {
        height: 100vh;
        width: 80%;
        display: grid;
        grid-template-columns: 1fr 1fr;
        /* grid-template-rows: auto auto; */
        background-color: white;
        margin-top: 150px;
        row-gap: 0;
        grid-auto-rows: min-content;
    }
    .habit-streak-section {
        background-color: #ffffff;
        margin: 10px;
        border: 1px solid #D9D9D9;
        border-radius: 10px;
        height: auto;
        align-self: start;
    }
    .task-section {
        background-color: #ffffff;
        margin: 10px;
        border: 1px solid #D9D9D9;
        border-radius: 10px;
        align-self: start;
    }
}

.top-bar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    border-bottom: 2px solid #D9D9D9;
    padding: 0;
    flex: 0 0;
    position: fixed;
    width: 100%;
    background-color: white;
}

.flex {
    flex: 1;
}

.top-bar h3 {
    padding-left: 10px;
    margin: 10px;
}

.profile-button {
    all: unset;
    display: inline-flex;
    position: absolute;
    right: 10px;
    cursor: pointer;
    border: none;
    background: none;
    outline: none;
    margin: 10px;
}
.profile-button:focus {
    outline: none;
}

.profile-button img {
    height: 30px;
    width: 30px;
    padding: 0;
    margin: 0;
}

.date {
    display: flex;
    justify-content: space-evenly;
    margin-top: 50px;
    padding-top: 20px;
    padding-bottom: 20px;
    position: fixed;
    width: 100%;
    background-color: white;
}

.date button {
    all: unset;
    cursor: pointer;
}

.date button:hover {
    background-color: rgb(177, 165, 165);
}

.date button:focus {
    background: none;
    outline: none;
}

.date button  h4{
    margin: 0;
    padding: 0;
}

.date button img {
    height: 15px;
    width: 15px;
}

.selected-date-input {
    position: "absolute";
    top: 0;
    left: 0;
    width: "100%";
    height: "100%";
    opacity: 0;
    cursor: "pointer";
}

.task-section h3 {
    margin: 0;
    padding: 5px;
}

.task-section h4 {
    margin: 0;
    padding-left: 5px;
    text-align: left;
}

.pending-tasks {
    padding-left: 10px;
    padding-right: 10px;
}

.completed-tasks {
    margin-top: 20px;
    padding-left: 10px;
    padding-right: 10px;
    margin-bottom: 20px;
}





.streaks {
    padding-left: 10px;
    padding-right: 10px;
    margin-bottom: 20px;
}

.summary-section {
    display: flex;
    flex-direction: column;
    margin: 10px;
    margin-bottom: 20px;
    border-radius: 10px;
    padding-bottom: 20px;
}

.summary-section

.summary-items {
    display: flex;
    justify-content: space-evenly;
    background-color: rgb(226, 221, 221);
    border-radius: 10px;
}


/*Profile page styles*/

.profile-bar {
    display: flex;
    justify-content: space-between;
    padding-bottom: 5px;
    border-bottom: 1px solid #D9D9D9;
    flex: 0 0;
    position: fixed;
    width: 100%;
    background-color: white;
}

@media (max-width: 1000px) {
    .achievements {
        margin: 10px;
        display: flex;
        flex-direction: column;
        text-align: left;
        border: 1px solid #D9D9D9;
        border-radius: 10px;
        padding: 10px;
        margin-bottom: 20px;
    }
}


@media (min-width: 800px) {
    .profile-page {
        width: 80%;
        display: grid;
        grid-template-columns: 1fr 1fr;
        grid-template-rows: auto auto auto auto;
    }

    .one { grid-column: 1; grid-row: 1}
    .two { grid-column: 1; grid-row: 2}
    .three { grid-column: 2; grid-row: 1}

    .achievements {
        margin: 10px;
        margin-top: 75px;
        display: flex;
        flex-direction: column;
        text-align: left;
        border: 1px solid #D9D9D9;
        border-radius: 10px;
        padding: 10px;
        margin-bottom: 20px;
    }
}


.profile-bar h2 {
    margin: 0;
    margin-top: 10px;
}

.back-button {
    width: 80px;
    height: 40px;
    background-color: #f7f6f6;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin: 5px;
    margin-top: 10px;
    padding: 10px;
    border: none;
    outline: none;
}


.back-button h4 {
    margin: 0;
    font-weight: 500;
}

.logout-button {
    height: 40px;
    background-color: #f7f6f6;
    display: flex;
    flex-direction: row;
    margin: 5px;
    margin-top: 10px;
}
/* ... */

